﻿11.0.07.alpha.1 - 31st August 2024
- For 'Remove transforms' ('System'), added 'Cursed Pickaxe'.
- For 'Media', added zones and dungeons from The War Within.  This includes Ringing Deeps, Isle of Dorn, Hallowfall, Azj-Kahet ('Zones') and Ara-Kara, City of Threads, Dawnbreaker, Nerub-ar Palace, Priory of the Sacred Flame and Rookery ('Dungeons').

11.0.05 - 21st August 2024
- Added a new option 'Block requested invites'.  If enabled, requests to invite a player to your group will be declined unless the player requesting to join is a friend.
- Removed the 'Show threads of time' option since the Timerunning event has now ended.
- For 'Enhance minimap' ('Interface'), the 'MoveAny' addon button will now show inside the combine addon buttons frame.

11.0.04 - 14th August 2024
- Updated for game patch 11.0.2.

11.0.01 - 24th July 2024
- Welcome to The War Within!
- For 'Enhance minimap', added a button texture for Zygor.
- Updated dropdown menu code.
- Removed Dragonflight transitional code.

10.2.40 - 4th July 2024
- This is the last release that is compatible with both Dragonflight and The War Within.
- Future releases will be for The War Within only.
- Republished due to an issue with CurseForge.

10.2.37 - 26th June 2024
- The War Within Beta: The 'Combat plates' option ('System') is available once again.

10.2.36 - 21st June 2024
- The War Within Beta: For 'Sell junk automatically' ('Automation'), the two transmogrify settings have been removed.  In The War Within, all uncollected gear is collected automatically when sold regardless of whether it can be equipped or not so the settings are no longer needed.
- The War Within Beta: The 'Combat plates' option ('System') is not available for now due to a bug in the game.

10.2.35 - 19th June 2024
- The War Within Beta: The 'Show character addons' option ('System') is now available.