@@ -554,6 +554,14 @@
 			"4618261.ogg#4618261", "4618263.ogg#4618263", "4618265.ogg#4618265", "4618267.ogg#4618267", "4618269.ogg#4618269", "4618271.ogg#4618271", "4618273.ogg#4618273", "4618275.ogg#4618275", "4618277.ogg#4618277", "4618279.ogg#4618279", "4618281.ogg#4618281", "4618283.ogg#4618283", "4618285.ogg#4618285", "4618287.ogg#4618287", "4618289.ogg#4618289", "4618291.ogg#4618291", "4741268.ogg#4741268", "4741270.ogg#4741270", "4741272.ogg#4741272", "4741274.ogg#4741274", "4741276.ogg#4741276", "4741278.ogg#4741278", "4741280.ogg#4741280", "4741282.ogg#4741282", "4741284.ogg#4741284", "4741286.ogg#4741286", "4741288.ogg#4741288", "4741290.ogg#4741290", "4741292.ogg#4741292", "4741294.ogg#4741294", "4741296.ogg#4741296", "4741298.ogg#4741298",
 		},
 
+		-- Cursed Pickaxe
+		["MuteCursedPickaxe"] = {
+			-- sound/creature/earthendwarffemale/earthendwarffemale_aggro
+			"5919781.ogg#5919781", "5919783.ogg#5919783", "5919785.ogg#5919785", "5919787.ogg#5919787", "5919789.ogg#5919789", 
+			-- sound/creature/earthendwarfmale/earthendwarfmale_aggro
+			"5919528.ogg#5919528", "5919530.ogg#5919530", "5919550.ogg#5919550", "5919552.ogg#5919552", "5919554.ogg#5919554", 
+		},
+
 	}
 
 	----------------------------------------------------------------------
